--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -23,7 +23,7 @@
         <ImageView
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:contentDescription="Timer Icon"
+            android:contentDescription="@string/timer_icon"
             android:src="@drawable/icon_timer"
             app:tint="@color/blue"
             android:layout_toStartOf="@+id/timer_indicator_textview"
@@ -39,5 +39,99 @@
             android:id="@+id/timer_indicator_textview"
             />
     </RelativeLayout>
+    
+    <com.google.android.material.progressindicator.LinearProgressIndicator
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="8dp"
+        android:progress="40"
+        android:id="@+id/question_progress_indicator"/>
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginVertical="8dp"
+        android:elevation="4dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="8dp">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="120dp"
+                tools:text="What is Android Os?"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:padding="8dp"
+                android:background="@drawable/rounded_corner"
+                android:backgroundTint="@color/blue"
+                android:textColor="@color/white"
+                android:gravity="center"
+                android:layout_marginVertical="8dp"
+                android:id="@+id/question_textview"
+                />
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="4dp"
+                android:backgroundTint="@color/gray"
+                tools:text = "Answer A"
+                android:textColor="@color/black"
+                android:paddingVertical="12dp"
+                android:gravity="center_vertical"
+                android:textSize="18sp"
+                android:id="@+id/btn0"
+                />
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="4dp"
+                android:backgroundTint="@color/gray"
+                tools:text = "Answer B"
+                android:textColor="@color/black"
+                android:paddingVertical="12dp"
+                android:gravity="center_vertical"
+                android:textSize="18sp"
+                android:id="@+id/btn1"
+                />
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="4dp"
+                android:backgroundTint="@color/gray"
+                tools:text = "Answer C"
+                android:textColor="@color/black"
+                android:paddingVertical="12dp"
+                android:gravity="center_vertical"
+                android:textSize="18sp"
+                android:id="@+id/btn2"
+                />
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="4dp"
+                android:backgroundTint="@color/gray"
+                tools:text = "Answer D"
+                android:textColor="@color/black"
+                android:paddingVertical="12dp"
+                android:gravity="center_vertical"
+                android:textSize="18sp"
+                android:id="@+id/btn3"
+                />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="4dp"
+                android:text = "Next"
+                android:textColor="@color/white"
+                android:paddingVertical="12dp"
+                android:gravity="center_vertical"
+                android:layout_gravity="end"
+                android:textSize="20sp"
+                android:paddingHorizontal="40dp"
+                android:id="@+id/next_btn"
+                />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
